--- a/assets/css/catalogo_ampliacion.css
+++ b/assets/css/catalogo_ampliacion.css
@@ -1,126 +1,454 @@
 .catalogo_text {
-  display: flex;
-  justify-content: center;
-  padding: 0% 0% 5% 0%;
+    display: flex;
+    justify-content: center;
+    padding: 0% 0% 5% 0%;
 }
 /*-----------*/
 
 /*-----swiper-------*/
 
 .swiper-catalogo {
-  width: 75%;
+    width: 75%;
 }
 
 .container_catalogo_ampliacion {
-  width: 100%;
-  position: relative;
-  padding: 3% 0 0% 0%;
-  display: block;
+    width: 100%;
+    position: relative;
+    padding: 3% 0 0% 0%;
+    display: block;
 }
 
 .container_swiper_catalogo {
-  width: 85%;
-  max-width: 1366px;
-  position: relative;
-  margin: 0 auto;
-  display: block;
+    width: 85%;
+    max-width: 1366px;
+    position: relative;
+    margin: 0 auto;
+    display: block;
 }
 .container_catalogo_3 {
-  width: 100%;
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  row-gap: 30px;
-  flex-direction: column;
-  align-items: center;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 30px;
+    flex-direction: column;
+    align-items: center;
 }
 
 .swiper_catalogo {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 .swiper_catalogo > .swiper-wrapper > .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .swiper_catalogo > .swiper-wrapper > .swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /*-----*/
 .swiper_content_slider_catalogo {
-  width: 100%;
-  justify-content: left;
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  padding: 0%;
-  background-color: #f2f2f2;
+    width: 100%;
+    justify-content: left;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding: 0%;
+    background-color: #f2f2f2;
 }
 .content_catalogo_01 {
-  width: 100%;
-  display: flex;
-  position: relative;
-  /* justify-content: center; */
+    width: 100%;
+    display: flex;
+    position: relative;
+    /* justify-content: center; */
 }
 .img_col_1_catalogo {
-  width: 50%;
+    width: 50%;
 }
 .content_catalogo_col_1 {
-  width: 100%;
-  display: flex;
-  padding: 5em;
-  flex-direction: column;
-  flex-wrap: nowrap;
+    width: 100%;
+    display: flex;
+    padding: 5em;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 .catalogo_tittle {
-  font-family: "Frank Ruhl Libre", serif;
-  font-size: 2.8em;
-  font-weight: 700;
-  line-height: 43px;
-  text-transform: uppercase;
-  color: #363435;
-  letter-spacing: -2px;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2.8em;
+    font-weight: 700;
+    line-height: 43px;
+    text-transform: uppercase;
+    color: #363435;
+    letter-spacing: -2px;
 }
 .ref_share_catalogo {
-  width: 100%;
-  display: flex;
-  padding: 3% 0%;
-  text-transform: uppercase;
+    width: 100%;
+    display: flex;
+    padding: 3% 0%;
+    text-transform: uppercase;
 }
 img.share_icon_catalogo {
-  width: 5%;
+    width: 5%;
+}
+.text_style_black {
+    text-transform: uppercase;
+    font-weight: 670;
 }
 
 .container_swiper_catalogo .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  display: block;
-  position: relative;
-  margin-bottom: 5px !important;
-  transform: unset !important;
-  border-radius: unset !important;
-  opacity: unset !important;
-  background: unset !important;
-  border: 3px solid #dfdfdf;
-  transition: 400ms ease-in-out !important;
+    width: 12px;
+    height: 12px;
+    display: block;
+    position: relative;
+    margin-bottom: 5px !important;
+    transform: unset !important;
+    border-radius: unset !important;
+    opacity: unset !important;
+    background: unset !important;
+    border: 3px solid #dfdfdf;
+    transition: 400ms ease-in-out !important;
 }
 
 .container_swiper_catalogo
-  .swiper-pagination-bullet.swiper-pagination-bullet-active {
-  border: 3px solid #ec3237;
+    .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    border: 3px solid #ec3237;
 }
 
 .container_swiper_catalogo .catalogo-pagination {
-  transform: unset !important;
-  left: 10% !important;
-  bottom: 50% !important;
-  top: unset !important;
+    transform: unset !important;
+    left: 10% !important;
+    bottom: 50% !important;
+    top: unset !important;
+}
+
+@media screen and (min-width: 1440px) and (max-width: 1919px) {
+    .content_catalogo_col_1 {
+        width: 100%;
+        display: flex;
+        padding: 3em;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    img.share_icon_catalogo {
+        width: 6%;
+        margin-left: 2%;
+    }
+}
+
+@media screen and (min-width: 1366px) and (max-width: 1439px) {
+    .content_catalogo_col_1 {
+        width: 100%;
+        display: flex;
+        padding: 2em;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    img.share_icon_catalogo {
+        width: 5%;
+        margin-left: 2%;
+    }
+}
+
+@media screen and (min-width: 1280px) and (max-width: 1365px) {
+    .content_catalogo_col_1 {
+        width: 100%;
+        display: flex;
+        padding: 2em;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    img.share_icon_catalogo {
+        width: 5%;
+        margin-left: 2%;
+    }
+    .text_style_black {
+        text-transform: uppercase;
+        font-weight: 670;
+        margin-right: 10px;
+        margin-right: 5px;
+    }
+}
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .container_swiper_catalogo {
+        width: 90%;
+        max-width: 1366px;
+        position: relative;
+        margin: 0 auto;
+        display: block;
+    }
+    .content_catalogo_col_1 {
+        width: 100%;
+        display: flex;
+        padding: 2em 1em 2em 1em;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .catalogo_tittle {
+        font-family: 'Frank Ruhl Libre', serif;
+        font-size: 2.4em;
+        font-weight: 700;
+        line-height: 30px;
+        text-transform: uppercase;
+        color: #363435;
+        letter-spacing: -2px;
+    }
+    img.share_icon_catalogo {
+        width: 5%;
+        margin-left: 2%;
+    }
+    .text_style_black {
+        text-transform: uppercase;
+        font-weight: 670;
+        margin-right: 10px;
+        margin-right: 5px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .container_catalogo_ampliacion {
+        width: 100%;
+        position: relative;
+        padding: 0% 0 0% 0%;
+        display: block;
+    }
+    .content_catalogo_col_1 {
+        width: 100%;
+        display: flex;
+        padding: 2em;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .container_swiper_catalogo {
+        width: 100%;
+        max-width: 1366px;
+        position: relative;
+        margin: 0 auto;
+        display: block;
+    }
+    img.share_icon_catalogo {
+        width: 4%;
+        margin-left: 2%;
+    }
+    .content_catalogo_01 {
+        width: 100%;
+        display: flex;
+        position: relative;
+        flex-direction: column;
+    }
+    .img_col_1_catalogo {
+        width: 100%;
+        height: 230px;
+    }
+    .text_style_black {
+        text-transform: uppercase;
+        font-weight: 670;
+        margin-right: 10px;
+    }
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+    h2,
+    .h2 {
+        font-size: 2.1em;
+        font-weight: 600;
+        line-height: 85%;
+        color: #363435;
+        text-transform: uppercase;
+        letter-spacing: -3px;
+        text-align: center;
+    }
+    .swiper_slider_1 {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        flex-wrap: wrap;
+        padding: 14px;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .container_catalogo_ampliacion {
+        width: 100%;
+        position: relative;
+        padding: 0% 0 0% 0%;
+        display: block;
+    }
+    .content_catalogo_col_1 {
+        width: 100%;
+        display: flex;
+        padding: 2em;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .container_swiper_catalogo {
+        width: 100%;
+        max-width: 1366px;
+        position: relative;
+        margin: 0 auto;
+        display: block;
+    }
+    img.share_icon_catalogo {
+        width: 4%;
+        margin-left: 2%;
+    }
+    .catalogo_tittle {
+        font-family: 'Frank Ruhl Libre', serif;
+        font-size: 1.5em;
+        font-weight: 700;
+        line-height: 43px;
+        text-transform: uppercase;
+        color: #363435;
+        letter-spacing: -2px;
+    }
+    .content_catalogo_col_1 {
+        width: 100%;
+        display: flex;
+        padding: 1em;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .content_catalogo_01 {
+        width: 100%;
+        display: flex;
+        position: relative;
+        flex-direction: column;
+    }
+    .img_col_1_catalogo {
+        width: 100%;
+        height: 200px;
+    }
+    .text_style_black {
+        text-transform: uppercase;
+        font-weight: 670;
+        margin-right: 10px;
+    }
+    .ref_share_catalogo {
+        width: 100%;
+        display: flex;
+        padding: 5% 0%;
+        text-transform: uppercase;
+        flex-direction: column;
+    }
+    .container_swiper_catalogo .catalogo-pagination {
+        transform: unset !important;
+        left: 7% !important;
+        bottom: 50% !important;
+        top: unset !important;
+    }
+    .ref_share_catalogo {
+        width: 100%;
+        display: flex;
+        padding: 5% 0%;
+        text-transform: uppercase;
+        flex-direction: column;
+    }
+    img.share_icon_catalogo {
+        width: 7%;
+        margin-top: 4%;
+    }
+}
+@media screen and (max-width: 425px) {
+    h2,
+    .h2 {
+        font-size: 2.1em;
+        font-weight: 600;
+        line-height: 85%;
+        color: #363435;
+        text-transform: uppercase;
+        letter-spacing: -3px;
+        text-align: center;
+    }
+    .swiper_slider_1 {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        flex-wrap: wrap;
+        padding: 14px;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .container_catalogo_ampliacion {
+        width: 100%;
+        position: relative;
+        padding: 0% 0 0% 0%;
+        display: block;
+    }
+    .content_catalogo_col_1 {
+        width: 100%;
+        display: flex;
+        padding: 2em;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .container_swiper_catalogo {
+        width: 100%;
+        max-width: 1366px;
+        position: relative;
+        margin: 0 auto;
+        display: block;
+    }
+    img.share_icon_catalogo {
+        width: 4%;
+        margin-left: 2%;
+    }
+    .catalogo_tittle {
+        font-family: 'Frank Ruhl Libre', serif;
+        font-size: 1.5em;
+        font-weight: 700;
+        line-height: 43px;
+        text-transform: uppercase;
+        color: #363435;
+        letter-spacing: -2px;
+    }
+    .content_catalogo_col_1 {
+        width: 100%;
+        display: flex;
+        padding: 1em;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .content_catalogo_01 {
+        width: 100%;
+        display: flex;
+        position: relative;
+        flex-direction: column;
+    }
+    .img_col_1_catalogo {
+        width: 100%;
+        height: 200px;
+    }
+    .text_style_black {
+        text-transform: uppercase;
+        font-weight: 670;
+        margin-right: 10px;
+    }
+    .ref_share_catalogo {
+        width: 100%;
+        display: flex;
+        padding: 5% 0%;
+        text-transform: uppercase;
+        flex-direction: column;
+    }
+    .container_swiper_catalogo .catalogo-pagination {
+        transform: unset !important;
+        left: 7% !important;
+        bottom: 50% !important;
+        top: unset !important;
+    }
+    .ref_share_catalogo {
+        width: 100%;
+        display: flex;
+        padding: 5% 0%;
+        text-transform: uppercase;
+        flex-direction: column;
+    }
+    img.share_icon_catalogo {
+        width: 7%;
+        margin-top: 4%;
+    }
 }
