--- a/assets/css/blogs_1.css
+++ b/assets/css/blogs_1.css
@@ -1,3 +1,6 @@
+.blog_card_content a {
+    width: 100%;
+}
 /*---container cards----*/
 .p_style_20 {
     font-size: 1.5em;
@@ -8,9 +11,8 @@
     margin-top: 5%;
     color: #fff;
 }
-.p_style {
+.p_style_blog {
     display: flex;
-    margin-top: 20%;
     flex-direction: column;
 }
 
@@ -33,18 +35,6 @@
     padding: 3%;
 }
 
-.content_row_1 {
-    margin: 0;
-}
-.text_card_blogs {
-    position: absolute;
-    bottom: 0%;
-    padding: 3rem;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
 .container_cards_01 {
     width: 100%;
     display: block;
@@ -109,9 +99,13 @@
 
 .text_card_blogs {
     position: absolute;
-    bottom: 0%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
     padding: 3rem;
-    height: 100%;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -127,6 +121,7 @@ h2,
     text-transform: uppercase;
     letter-spacing: -3px;
     text-align: center;
+    margin-bottom: 5%;
 }
 .container_cards_002 {
     width: 100%;
@@ -152,6 +147,9 @@ h2,
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .blog_card_content a {
+        width: 100%;
+    }
     .cards_content_2 {
         width: 100%;
         display: flex;
@@ -181,9 +179,8 @@ h2,
         margin-top: 5%;
         color: #fff;
     }
-    .p_style {
+    .p_style_blog {
         display: flex;
-        margin-top: 10%;
         flex-direction: column;
     }
     .p_style_2 {
@@ -193,18 +190,13 @@ h2,
     }
     .text_card_blogs {
         position: absolute;
-        bottom: 0%;
-        padding: 1rem;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-    .text_card_blogs {
-        position: absolute;
-        bottom: 0%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
         padding: 4rem;
-        height: 100%;
+        height: fit-content;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -212,6 +204,17 @@ h2,
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+    h2,
+    .h2 {
+        font-size: 2em;
+        font-weight: 600;
+        line-height: 90%;
+        color: #363435;
+        text-transform: uppercase;
+        letter-spacing: -3px;
+        text-align: center;
+        padding: 0px 0px 30px;
+    }
     .cards_content_2 {
         width: 100%;
         display: flex;
@@ -241,9 +244,8 @@ h2,
         margin-top: 5%;
         color: #fff;
     }
-    .p_style {
+    .p_style_blog {
         display: flex;
-        margin-top: 10%;
         flex-direction: column;
     }
     .p_style_2 {
@@ -253,9 +255,13 @@ h2,
     }
     .text_card_blogs {
         position: absolute;
-        bottom: 0%;
-        padding: 2rem;
-        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        padding: 4rem;
+        height: fit-content;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -268,6 +274,17 @@ h2,
 }
 
 @media screen and (min-width: 425px) and (max-width: 767px) {
+    h2,
+    .h2 {
+        font-size: 2em;
+        font-weight: 600;
+        line-height: 90%;
+        color: #363435;
+        text-transform: uppercase;
+        letter-spacing: -3px;
+        text-align: center;
+        padding: 0px 0px 30px;
+    }
     .cards_content_2 {
         width: 100%;
         display: flex;
@@ -297,9 +314,8 @@ h2,
         margin-top: 5%;
         color: #fff;
     }
-    .p_style {
+    .p_style_blog {
         display: flex;
-        margin-top: 10%;
         flex-direction: column;
     }
     .p_style_2 {
@@ -309,9 +325,13 @@ h2,
     }
     .text_card_blogs {
         position: absolute;
-        bottom: 0%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
         padding: 2rem;
-        height: 100%;
+        height: fit-content;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -324,14 +344,17 @@ h2,
 }
 
 @media screen and (max-width: 425px) {
-    /*---tambien te puede interesar-----*/
-    .tittle_2_blog {
-        align-items: center;
-        font-size: 1.7em;
+    h2,
+    .h2 {
+        font-size: 2em;
+        font-weight: 600;
+        line-height: 90%;
+        color: #363435;
+        text-transform: uppercase;
+        letter-spacing: -3px;
+        text-align: center;
+        padding: 0px 0px 30px;
     }
-}
-
-@media screen and (max-width: 425px) {
     .cards_content_2 {
         width: 100%;
         display: flex;
@@ -346,7 +369,7 @@ h2,
         flex-direction: column;
     }
     .container_cards_02 {
-        width: 70%;
+        width: 90%;
         max-width: 1366px;
         display: block;
         position: relative;
@@ -361,9 +384,8 @@ h2,
         margin-top: 5%;
         color: #fff;
     }
-    .p_style {
+    .p_style_blog {
         display: flex;
-        margin-top: 10%;
         flex-direction: column;
     }
     .p_style_2 {
@@ -373,9 +395,13 @@ h2,
     }
     .text_card_blogs {
         position: absolute;
-        bottom: 0%;
-        padding: 0em 1em;
-        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        padding: 2rem;
+        height: fit-content;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
